<resources>
    <string name="app_name">모두의 아파트</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phoneCertificationText">모아는 휴대폰 번호로 가입해요. \n번호는 안전하게 보관되며 \n어디에도 공개되지 않아요 </string>
    트
    <string name="certificationNoticeContent">잠깐!! \n 모두의 아파트는 실제 아파트 거주자만 이용할 수 있습니다 \n 회원가입을 위해 신분증 1종(주민등록증,여권,면허증 등) 을 준비해주세요 \n
    만약 신분증의 주소가 설정하신 아파트 주소와 다르다면 추가로 서류가 필요해요 ! </string>

    <string name="aptCertificationSkip">아직 준비 되지 않았군요! \n 사진 인증을 거치지 않은 경우 글쓰기 및 댓글 달기에 참여가 제한 됩니다 \n \n 가입 후에 사진 인증을 거쳐
    실제 아파트 거주자로 등록될 수 있어요</string>
    <string name="aptCertificationSuccess"> </string>
    <string name="signUpSuccess">회원가입이 완료 되었습니다!</string>
    <string name="aptUncertified">실제 거주지 미인증</string>
    <string name="aptUncertifiedDetail">실제 거주지 미인증 \n 회원가입이 완료되었습니다!\n 활동하는데에 제한이 있으니,\n 추후에 인증을 해주세요.</string>
    <string name="aptCertified">실제 거주지 인증</string>
    <string name="signUpLastMessage"> 함께 만들어가는 아파트 선진 문화에 동참하신 것을 환영해요 ^.^ </string>
    <string name="kidReviewHint">솔직한 피드백은 육아 돌봄을 \n 구하고 있는 이웃들에게 많은 도움이 됩니다 </string>
    <string name="kidPolicy">글 작성하기 전에 알려드려요 \n 어떤 돌봄을 원하시는지(등하원 돕기,실내놀이 , 학습지도 등)과 돌봄위치 , 특별히 요청하는 사항 등에 대해서 \n 적어주세요\n\n 육아돌봄 정책 보러가기</string>
    <string name="kidSuccessText">채용이 완료 되었습니다 \n 실제 시터를 선택해주세요</string>
    <string name="NeighborhoodMessage">모두에서 제안하는 이웃의 범위 입니다 \n 우리 아파트 단지 외에도 근처 이웃과 \n 다양한 소통을 해보세요!</string>
    <string name="CertificationMessageFirst">잠깐! 모두의 아파트는 \n 실제 아파트 거주자만 이용할 수 있어요!</string>
    <string name="CertificationMessageSecond">회원가입을 위해 신분증 1종\n (주민등록증,여권,면허증)등을 준비해주세요\n 만약, 신분증 주소가 실제 거주 아파트가 다르다면 추가 서류가 필요해요!</string>
    <string name="CertificationMessageThird">우리 아파트 주소가 나와있는 서류(관리비고지서,택배송장, 카드명세서, 입주민카드, 세대주확인증,공공요금명세서 등 주소 확인이 가능한 서류 추가로 준비)</string>
    <string name="CoincidenceText">신분증 주소와 거주지가 일치할 경우</string>
    <string name="CoincidenceDetail">신분증의 주민등록번호 뒷자리를 손가락,종이\n등 으로 가리고 사진을 찍어 제출해주세요! </string>
    <string name="NotCoincidenceText">신분증 주소와 거주지가\n일치하지 않을 경우</string>
    <string name="NotCoincidenceDetail">신분증과 주소가 확인되는 관련서류 하나를 추가로 제출해주세요! \n (주민등록번호 뒷자리 가리기 필수)</string>
    <string name="NotCertificationText">인증 실패</string>
    <string name="NotCertificationDetail">신분증의 주민등번호 뒷자리를 모두 공개하여 \n 올리는 경우 인증이 안됩니다</string>
    <string name="AptCertificationSuppliesText">신분증 1종(주민등록증,여권,면허증 등)\n 주민등록번호 뒷자리 가리고 제출\n\n 만약 신분증 주소가 실제 거주 아파트가 다르다면 우리 아파트 주소가 나와있는 서류를 첨부해주세요! </string>
    <string name="AptCertificationSuppliesDetail">(관리비고지서,택배송장,카드명세서,입주민카드,\n세대주 확인증,공공요금명세서 등 주소확인이 \n 가능한 서류 추가로 준비)</string>
    <string name="SignUpResultCertificationVersion">회원가입이 완료되었습니다 \n 제출하신 서류를 모아 고객안전팀에서 \n 승인 검토중입니다.\n (2일 이내 승인)</string>
    <string name="AptCertificationImagesText">신분증의 주민등록 번호 뒷자리를 \n 모두 가리고 첨부하셨습니까?</string>
    <string name="TalentSharingMainText">나의 소소한 재능을\n 이웃들과 공유하고 싶어요</string>
    <string name="HelpRequestMainText">나의 필요(요청)을 올리고\n 도움을 받고 싶어요</string>
    <string name="ClaimNewAptDialog">성공적으로 아파트 등록 신청이 완료되었습니다\n 등록되는데로 모아팀에서 확인 연락드리겠습니다</string>
    <string name="ConciergeMainTalent">나의 소소한 재능을\n이웃들과 공유하고 싶어요!</string>
    <string name="ConciergeMainHelp">나의 필요(요청)을 올리고\n도움을 받고 싶어요</string>
    <string name="NeederCompletionText">서비스가 완료되었어요\n실제 재능을 공유한 이웃을 선택해주세요</string>
    <string name="NeederWriteGuide">어떤 도움을 원하시는지(콘크리트벽 못박기 \n도와주세요,등하원 도우미 구해요) 와 위치,\n 특별히 요청하는 사항 등에 대해서 적어주세요</string>
    <string name="HelperWriteGuide">어떤 재능으로 이웃에게 도움을 주실 수 있는지\n(등하원 돕기, 학습지도, 가구옮기기, 반려동물케어)등\n자신의 위치, 활동 가능한 시간 및 간단 자기소개를 적어주세요.</string>
    <string name="goToGuideLine"><u>재능공유 운영 정책 보러가기</u></string>
    <string name="loadingMessage">우리아파트도\n따듯해질수 있어요</string>
    <string name="ReAptCertification">이미 아파트 인증을 완료하셨습니다\n새로운 아파트로 인증을 원하시나요? </string>
    <string name="CertificationEndMessage">아파트 인증 절차를 마무리했습니다\n제출하신 서류를 모아 고객안전팀에서\n 승인 검토중입니다.\n(2일 이내 승인) </string>
    <string name="firstViewMessage">이웃 아파트 단지까지\n 하나로 연결하는</string>
    <string name="thirdViewMessage">음성채팅으로\n연결되는 곳</string>
    <string name="MoaOperationUrl">https://moduapt.com/terms/use</string>
    <string name="MoaPrivatePolicyUrl">https://moduapt.com/terms/privacy</string>
    <string name="marketingPolicyUrl">https://moduapt.com/terms/marketing</string>
    <string name="groupBuyingUrl">https://m.post.naver.com/viewer/postView.naver?volumeNo=32031386&amp;memberNo=25160931</string>
    <string name="complaintGuideText">이곳은 관리실에 민원을 신청하는 공간 이에요.사진과 함께 의견이나 요청사항을 적어주시면 관리사무실에서 확인 후\n 조치사항을 안내드립니다.</string>
    <string name="notFoundAptInfo">검색값이 없습니다\n 아파트 이름 혹은 주소를(도로명,지번) 검색해보세요\n 검색 값이 없을 경우 하단의 우리 아파트 추가 요청하기 버튼을 클릭해주세요</string>
    <string name="appVersion">1.0.0</string>
    <string-array name="mainCategory">
        <item>"인테리어"</item>
        <item>"육아,교육"</item>
        <item>"품앗이"</item>
        <item>"반려동물"</item>
        <item>"기타"</item>
    </string-array>
    <string-array name="interiorDetail">
        <item>"못박기"</item>
        <item>"조명교체"</item>
        <item>"가구 옮기기"</item>
        <item>"정리/수납"</item>
        <item>"도어락,문고리 교체"</item>
    </string-array>
    <string-array name="kidDetail">
        <item>"등하원 도우미"</item>
        <item>"놀이"</item>
        <item>"교육"</item>
        <item>"공동 육아 재능 기부하기"</item>
    </string-array>
    <string-array name="laborDetail">
        <item>"김장 김치 함께 하기"</item>
        <item>"대형마트 장 물건 나누기"</item>
    </string-array>
    <string-array name="petDetail">
        <item>"반려동물 맡기기"</item>
        <item>"반려동물 산책"</item>
    </string-array>
    <string-array name="sitterType">
        <item>"엄마,아빠"</item>
        <item>"할머니,할아버지"</item>
        <item>"대학생"</item>
        <item>"선생님"</item>
    </string-array>
    <string-array name="voiceChatTheme">
        <item>"수다"</item>
        <item>"커피친구"</item>
        <item>"드라마"</item>
        <item>"반려동물"</item>
        <item>"운동"</item>
        <item>"맛집"</item>
        <item>"부동산"</item>
        <item>"지역개발"</item>
        <item>"입주자대표회의"</item>
        <item>"기타"</item>
    </string-array>
    <string name="title_activity_loading_fragment">LoadingFragment</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="voice_room_make">방만들기</string>
    <string name="agora_app_id">1186f40c5f4743a7b0650c9a6a0565d6</string>

</resources>