<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:context=".ui.mypage.AptModifyCertificationNoticeFragment">
<data>
    <variable
        name="model"
        type="com.moa.moakotlin.ui.mypage.AptModifyCertificationNoticeViewModel" />
</data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:id="@+id/back"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:padding="5dp"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_width="12dp"
                    android:layout_height="25dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@drawable/ic_back" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="8.8dp"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:id="@+id/aptCertificationText"
                app:layout_constraintTop_toTopOf="@id/back"
                app:layout_constraintBottom_toBottomOf="@id/back"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/notosanscjkkr_medium"
                app:layout_constraintStart_toStartOf="parent"
                android:text="인증하기"
                tools:text="인증하기" />

            <ImageView
                android:layout_width="235dp"
                android:layout_height="191dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/aptCertificationText"
                android:layout_marginStart="60dp"
                android:layout_marginEnd="60dp"
                android:layout_marginTop="17dp"
                android:background="@drawable/img_certification"
                android:id="@+id/aptCertificationImage"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintDimensionRatio="H,5:1"
                android:text="@string/CertificationMessageFirst"
                app:layout_constraintTop_toBottomOf="@id/aptCertificationImage"
                android:layout_marginTop="18dp"
                android:textSize="16dp"
                android:textStyle="bold"
                android:fontFamily="@font/notosanscjkkr_medium"
                android:textColor="@color/moaBlack"
                android:gravity="center"
                android:id="@+id/CertificationFirstText"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/CertificationFirstText"
                android:layout_marginTop="5dp"
                android:text="@string/CertificationMessageSecond"

                android:gravity="center"
                android:textSize="14dp"
                android:fontFamily="@font/notosanscjkkr_medium"
                android:textColor="@color/moaBlack"
                android:id="@+id/CertificationSecondText"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/CertificationSecondText"
                android:padding="5dp"
                android:layout_marginTop="25dp"
                android:text="@string/CertificationMessageThird"
                android:textSize="14dp"
                android:fontFamily="@font/notosanscjkkr_medium"
                android:background="@drawable/login_edit_text_radius_15"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:id="@+id/CertificationThirdText"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintDimensionRatio="H, 6:1"
                android:background="@drawable/button_shape_black_radius_15"
                app:layout_constraintTop_toBottomOf="@id/CertificationThirdText"
                android:layout_marginTop="10dp"
                android:text="다음에 인증하기"
                android:fontFamily="@font/notosanscjkkr_medium"
                android:textColor="@color/white"
                android:id="@+id/skipCertificationBtn"
                android:textSize="18dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/skipCertificationBtn"
                android:layout_marginTop="10dp"
                app:layout_constraintDimensionRatio="H,6:1"
                android:background="@drawable/button_shape_main_color"
                android:text="인증하기"
                android:fontFamily="@font/notosanscjkkr_medium"
                android:id="@+id/CertificationBtn"
                android:textSize="18dp"
                android:textStyle="bold"
                android:textColor="@color/moaBlack"
                android:layout_marginBottom="15dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>